styles/PageFilter.module.css
.wrapper {
  display: grid;
  gap: var(--space-m);
  font-family: var(--font-sans);
  font-variation-settings: "wght" 500;
  font-size: var(--step-0);
}

.filterRow {
  display: grid;
  gap: var(--offset-l);
  align-items: stretch;
}

.filterRow:has(.filterActionContainer) {
  grid-template-columns: 1fr auto;
}

.filterBar {
  --shadow-color: hsl(
    from var(--routeColor) h s l / var(--route-color-opacity)
  );

  position: sticky;
  z-index: 1;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--offset-l);
  padding: var(--offset-m) var(--offset-l);
  background: var(--color-background);
  border: 0.125rem solid var(--shadow-color);
  box-shadow: var(--space-4xs) var(--space-4xs) var(--shadow-color);
}

.field {
  display: flex;
  align-items: center;
  gap: var(--offset-m);
  background: var(--color-almost-white);
  color: var(--color-dark);
  border-radius: 0.625rem;
  padding: var(--offset-m) var(--offset-l);
  flex: 1;
}

.field:focus-within {
  border-color: var(--color-teal);
  box-shadow: 0 0 0 2px hsl(from var(--color-teal) h s l / 80%);
}

.icon {
  width: 1.25rem;
  height: 1.25rem;
}

.input {
  width: 100%;
  padding-block: var(--offset-m);
  border: none;
  outline: none;
  background: transparent;
  color: var(--color-dark);
}

.input::placeholder {
  color: hsl(from var(--color-dark) h s l / 60%);
}

.resultsSummary {
  color: hsl(from var(--color-text) h s l / 60%);
}

.filterActionContainer {
  --shadow-color: hsl(
    from var(--routeColor) h s l / var(--route-color-opacity)
  );

  display: flex;
  align-items: stretch;
  justify-content: stretch;
  padding: 0;
  background: var(--color-background);
  border: 0.125rem solid var(--shadow-color);
  box-shadow: var(--space-4xs) var(--space-4xs) var(--shadow-color);
}

@media (width < 700px) {
  .filterRow:has(.filterActionContainer) {
    grid-template-columns: 1fr;
  }

  .filterBar {
    flex-wrap: wrap;
  }

  .filterActionContainer {
    justify-content: stretch;
  }
}

